test/classes/initializers/phase1/methodCallIf.good
methodCallIf.chpl:4: In initializer:
methodCallIf.chpl:5: error: cannot call method "option1" on type "Foo" before "init this"
methodCallIf.chpl:5: note: before "init this" "this" is treated as parent type "RootClass" for method calls
methodCallIf.chpl:5: error: cannot call method "option2" on type "Foo" before "init this"
methodCallIf.chpl:5: note: before "init this" "this" is treated as parent type "RootClass" for method calls
